k8s-manifests/express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cna-express
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: cna-express.64c1f510fd664c708bd4.eastus2.aksapp.io  # Use your FQDN here
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service  # Ensure this matches your backend service name
            port:
              number: 8005
